--- a/css/style.css
+++ b/css/style.css
@@ -295,7 +295,7 @@ section{
 /*<!--================================== GAME =========================================-->*/
 
 #game{
-	background: url(./img/banner3.png) no-repeat center;
+	/*background: url(./img/banner3.png) no-repeat center; */
 	background-size: cover;
 	background-color: rgba(0,0,0,0.1);
 }
